--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,14 @@
   "name": "Slack Hide Typing",
   "version": "1.0.0",
   "manifest_version": 2,
-  "description": "This lightweight extension prevents Slack from sending a typing status to channels and private messages. You will be able to still see when other people are typing.",
-  "homepage_url": "http://www.andrewconner.org",
+  "description": "This lightweight extension prevents Slack from sending a typing status to channels and private messages.",
+  "homepage_url": "http://www.andrewconner.org/slack-hide-typing",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png",
     "512": "icons/icon512.png"
   },
-  "default_locale": "en",
   "permissions": [
     "https://*.slack.com/*"
   ],
